components/apps/jellyfin/dlna-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-dlna
  namespace: jellyfin
  annotations:
    metallb.universe.tf/allow-shared-ip: traefik
spec:
  ports:
  - name: jellyfin-auto
    port: 7359
    protocol: UDP
    targetPort: 7359
  - name: jellyfin-dlna
    port: 1900
    protocol: UDP
    targetPort: 1900
  selector:
    app: jellyfin
  type: ClusterIP
