components/apps/jellyfin/jellyfin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
  - name: main
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: jellyfin
  type: ClusterIP
