components/apps/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`jellyfin.redcomet.ca`) && PathPrefix(`/`)
    services:
    - kind: Service
      name: jellyfin
      port: 8080
